--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1125,7 +1125,7 @@ p.est{
 	text-decoration:none;
 }
 /*-- //timer --*/
-/*-- products --*/
+/*-- products.html --*/
 .breadcrumbs{
 	padding:1.5em 0;
 	background:#f5f5f5;
@@ -1387,7 +1387,7 @@ input#amount {
 	color:#ffc229;
 	font-weight:600;
 }
-/*-- //products --*/
+/*-- //products.html --*/
 /*--Typography--*/
 .well {
     font-weight: 300;
